testdata/baselines/reference/submodule/conformance/inferringClassMembersFromAssignments.errors.txt
a.js(20,9): error TS2322: Type 'string' is not assignable to type 'number'.
a.js(39,9): error TS2322: Type 'boolean' is not assignable to type 'number'.
b.ts(8,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'stringOrNumberOrUndefined' must be of type 'string | number | undefined', but here has type 'string | number'.
b.ts(9,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'stringOrNumberOrUndefined' must be of type 'string | number | undefined', but here has type 'string | number'.
b.ts(10,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'stringOrNumberOrUndefined' must be of type 'string | number | undefined', but here has type 'string | number'.
b.ts(11,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'stringOrNumberOrUndefined' must be of type 'string | number | undefined', but here has type 'string | number'.
b.ts(12,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'stringOrNumberOrUndefined' must be of type 'string | number | undefined', but here has type 'string | number'.
b.ts(19,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'stringOrBooleanOrUndefined' must be of type 'string | boolean | undefined', but here has type 'string | boolean'.
b.ts(21,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'any' must be of type 'any', but here has type 'null | undefined'.
b.ts(24,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'stringOrNumberOrUndefined' must be of type 'string | number | undefined', but here has type 'string | number'.
b.ts(25,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'stringOrNumberOrUndefined' must be of type 'string | number | undefined', but here has type 'string | number'.
b.ts(26,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'stringOrNumberOrUndefined' must be of type 'string | number | undefined', but here has type 'string | number'.
b.ts(27,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'stringOrNumberOrUndefined' must be of type 'string | number | undefined', but here has type 'string | number'.
b.ts(28,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'stringOrNumberOrUndefined' must be of type 'string | number | undefined', but here has type 'string | number'.


==== a.js (2 errors) ====
    class C {
        constructor() {
            if (Math.random()) {
                this.inConstructor = 0;
            }
            else {
                this.inConstructor = "string"
            }
            this.inMultiple = 0;
        }
        method() {
            if (Math.random()) {
                this.inMethod = 0;
                this.inMethodNullable = null;
            }
            else {
                this.inMethod = "string"
                this.inMethodNullable = undefined;
            }
            this.inMultiple = "string";
            ~~~~~~~~~~~~~~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
            this.inMultipleMethods = "string";
    
            var action = () => {
                if (Math.random()) {
                    this.inNestedArrowFunction = 0;
                }
                else {
                    this.inNestedArrowFunction = "string"
                }
            };
        }
        get() {
            if (Math.random()) {
                this.inGetter = 0;
            }
            else {
                this.inGetter = "string"
            }
            this.inMultiple = false;
            ~~~~~~~~~~~~~~~
!!! error TS2322: Type 'boolean' is not assignable to type 'number'.
            this.inMultipleMethods = false;
        }
        set() {
            if (Math.random()) {
                this.inSetter = 0;
            }
            else {
                this.inSetter = "string"
            }
        }
        prop = () => {
            if (Math.random()) {
                this.inPropertyDeclaration = 0;
            }
            else {
                this.inPropertyDeclaration = "string"
            }
        }
        static method() {
            if (Math.random()) {
                this.inStaticMethod = 0;
            }
            else {
                this.inStaticMethod = "string"
            }
    
            var action = () => {
                if (Math.random()) {
                    this.inStaticNestedArrowFunction = 0;
                }
                else {
                    this.inStaticNestedArrowFunction = "string"
                }
            };
        }
        static get() {
            if (Math.random()) {
                this.inStaticGetter = 0;
            }
            else {
                this.inStaticGetter = "string"
            }
        }
        static set() {
            if (Math.random()) {
                this.inStaticSetter = 0;
            }
            else {
                this.inStaticSetter = "string"
            }
        }
        static prop = () => {
            if (Math.random()) {
                this.inStaticPropertyDeclaration = 0;
            }
            else {
                this.inStaticPropertyDeclaration = "string"
            }
        }
    }
    
==== b.ts (12 errors) ====
    var c = new C();
    
    var stringOrNumber: string | number;
    var stringOrNumber = c.inConstructor;
    
    var stringOrNumberOrUndefined: string | number | undefined;
    
    var stringOrNumberOrUndefined = c.inMethod;
        ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'stringOrNumberOrUndefined' must be of type 'string | number | undefined', but here has type 'string | number'.
!!! related TS6203 b.ts:6:5: 'stringOrNumberOrUndefined' was also declared here.
    var stringOrNumberOrUndefined = c.inGetter;
        ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'stringOrNumberOrUndefined' must be of type 'string | number | undefined', but here has type 'string | number'.
!!! related TS6203 b.ts:6:5: 'stringOrNumberOrUndefined' was also declared here.
    var stringOrNumberOrUndefined = c.inSetter;
        ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'stringOrNumberOrUndefined' must be of type 'string | number | undefined', but here has type 'string | number'.
!!! related TS6203 b.ts:6:5: 'stringOrNumberOrUndefined' was also declared here.
    var stringOrNumberOrUndefined = c.inPropertyDeclaration;
        ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'stringOrNumberOrUndefined' must be of type 'string | number | undefined', but here has type 'string | number'.
!!! related TS6203 b.ts:6:5: 'stringOrNumberOrUndefined' was also declared here.
    var stringOrNumberOrUndefined = c.inNestedArrowFunction
        ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'stringOrNumberOrUndefined' must be of type 'string | number | undefined', but here has type 'string | number'.
!!! related TS6203 b.ts:6:5: 'stringOrNumberOrUndefined' was also declared here.
    
    var stringOrNumberOrBoolean: string | number | boolean;
    
    var number: number;
    var number = c.inMultiple;
    var stringOrBooleanOrUndefined : string | boolean | undefined;
    var stringOrBooleanOrUndefined = c.inMultipleMethods;
        ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'stringOrBooleanOrUndefined' must be of type 'string | boolean | undefined', but here has type 'string | boolean'.
!!! related TS6203 b.ts:18:5: 'stringOrBooleanOrUndefined' was also declared here.
    var any: any;
    var any = c.inMethodNullable;
        ~~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'any' must be of type 'any', but here has type 'null | undefined'.
!!! related TS6203 b.ts:20:5: 'any' was also declared here.
    
    
    var stringOrNumberOrUndefined = C.inStaticMethod;
        ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'stringOrNumberOrUndefined' must be of type 'string | number | undefined', but here has type 'string | number'.
!!! related TS6203 b.ts:6:5: 'stringOrNumberOrUndefined' was also declared here.
    var stringOrNumberOrUndefined = C.inStaticGetter;
        ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'stringOrNumberOrUndefined' must be of type 'string | number | undefined', but here has type 'string | number'.
!!! related TS6203 b.ts:6:5: 'stringOrNumberOrUndefined' was also declared here.
    var stringOrNumberOrUndefined = C.inStaticSetter;
        ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'stringOrNumberOrUndefined' must be of type 'string | number | undefined', but here has type 'string | number'.
!!! related TS6203 b.ts:6:5: 'stringOrNumberOrUndefined' was also declared here.
    var stringOrNumberOrUndefined = C.inStaticPropertyDeclaration;
        ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'stringOrNumberOrUndefined' must be of type 'string | number | undefined', but here has type 'string | number'.
!!! related TS6203 b.ts:6:5: 'stringOrNumberOrUndefined' was also declared here.
    var stringOrNumberOrUndefined = C.inStaticNestedArrowFunction;
        ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'stringOrNumberOrUndefined' must be of type 'string | number | undefined', but here has type 'string | number'.
!!! related TS6203 b.ts:6:5: 'stringOrNumberOrUndefined' was also declared here.
    